# flock

./: .env_template  .gitignore  README.md  mkdocs.yml  out.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: deploy-whiteduck-pypi.yml
docs/: agent_mechanics.md  architecture.drawio  architecture.md  generate_examples_docs.py  generate_nav.py  index.md  installation.md
docs/api/: flock.md  flock_agents.md
docs/examples/01_introduction/: 01_simple_example.md  02_typed_output.md  03_tool_and_code_agent.md  04_descriptions.md  05_typed_output2.md  06_simple_hand_off.md
docs/examples/02_cook_book_wip/: flock_without_llms.md  project_manager.md
docs/overrides/: extra.css  extra.js
examples/: README.md
examples/01_introduction/: 01_simple_example.py  02_typed_output.py  03_tool_and_code_agent.py  04_descriptions.py  05_typed_output2.py  06_simple_hand_off.py  07_flockclass.py
examples/02_cook_book_wip/: 04_b_long_research.py  04_hand_off_1.py  05_b_rag.py  flock_without_llms.py  long_research_no_handoff.py  project_manager.py  self_improvement.py
examples/03_misc_wip/formatting/: 01_pretty_print.py  02_rích_table.py  03_themed_table.py
examples/03_misc_wip/logging_examples/: 01_basic_logging.py  02_temporal_logging.py
examples/04_rag/: indexing.py  retriever.py
examples/notebooks_wip/: Untitled-1.ipynb  my_agent.json
review/: analysis.md
src/flock/: __init__.py  config.py
src/flock/agents/: batch_agent.py  loop_agent.py  trigger_agent.py  user_agent.py
src/flock/cli/: agent_input_form.py  app.py
src/flock/core/: __init__.py  flock.py  flock_agent.py  flock_class.py
src/flock/core/context/: context.py  context_manager.py  context_vars.py
src/flock/core/execution/: local_executor.py  temporal_executor.py
src/flock/interpreter/: python_interpreter.py
src/flock/platform/: docker_tools.py  jaeger_install.py
src/flock/themes/: 3024-day.toml  3024-night.toml  aardvark-blue.toml  abernathy.toml  adventure.toml  adventuretime.toml  afterglow.toml  alabaster.toml  alienblood.toml  andromeda.toml  apple-classic.toml  apple-system-colors.toml  arcoiris.toml  argonaut copy.toml  argonaut.toml  arthur.toml  ateliersulphurpool.toml  atom.toml  atom_test.toml  atomonelight.toml  aurora.toml  ayu copy.toml  ayu-light.toml  ayu-mirage.toml  ayu.toml  banana-blueberry.toml  batman.toml  belafonte-day.toml  belafonte-night.toml  birdsofparadise.toml  blazer.toml  blue-matrix.toml  blueberrypie.toml  bluedolphin.toml  blulocodark.toml  blulocolight.toml  borland.toml  breeze.toml  bright-lights.toml  broadcast.toml  (+296 more)
src/flock/workflow/: activities.py  agent_activities.py  temporal_setup.py  workflow.py
tests/: test_agent.py  test_basic.py  test_formatter.py
tests/integration/: test_agent_integration.py
tests/unittests/: test_flock.py  test_flock_agent.py
(+24 files in other folders)
